# hr_platform

./: .gitignore  README.md  TODO.md  docker-compose.yml
auth_service/: .env.example  docker-compose.yml
auth_service/alembic/versions/: 1f5340515fab_.py  5eb2be4438ca_.py  6c1df00e1d96_.py  7939c68e6f7e_.py  a9ba1687c621_.py
auth_service/app/: main.py
auth_service/app/core/: config.py  db.py  health.py  schemas.py  setup.py
auth_service/app/messaging/: event_consumer.py  event_publisher.py  rabbitmq.py
auth_service/app/models/: __init__.py  auth.py  base.py  token_blacklist.py
auth_service/app/schemas/: auth.py
auth_service/app/scripts/: seed_admin.py  seed_permissions.py
auth_service/app/services/: auth.py  email.py  permissions.py  roles.py
auth_service/shared/auth/: jwt_utils.py
auth_service/tests/: conftest.py  test_auth.py
employee_service/: requirements.txt
employee_service/alembic/versions/: 537c4d24d33a_.py  90e7257013de_.py  f0b1328c98c1_.py
employee_service/app/api/: __init__.py
employee_service/app/clients/: auth.py
employee_service/app/core/: config.py  (+2 more)
employee_service/tests/: conftest.py  test_employee.py
hr_shared/: README.md  __init__.py  pyproject.toml  setup.py
hr_shared/auth/: dependencies.py  jwt_utils.py
hr_shared/cache/: permissions.py
hr_shared/schemas/: common.py
payroll_service/: Dockerfile
payroll_service/alembic/: env.py  env_async.py
payroll_service/app/: main.py
payroll_service/scripts/: rm_migrations.sh
scripts/: install_shared.sh  rm_all_migrations.sh
timesheet_service/: README.md  models.py
(+35 files in other folders)
