[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-shared"
version = "0.1.0"
description = "Shared utilities for HR Platform microservices"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.3",
    "python-jose[cryptography]>=3.3.0",
    "fastapi>=0.109.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.0.0",
    "mypy>=1.7.0",
]